feat: front & back - fix somes bugs

--- a/app/main/static/base.css
+++ b/app/main/static/base.css
@@ -9,6 +9,8 @@
     --fourthiary-color: #3E69CC;
     --white-color: #fff;
     --black-color: #000;
+    --valid-color: #28a745;
+    --error-color: #dc3545;
 }
 
 
