--- a/app/main/templates/public/register.html
+++ b/app/main/templates/public/register.html
@@ -4,7 +4,7 @@
 {% block title %}Inscription - Popularity Corner{% endblock title %}
 
 {% block extra-head %}
-    <link rel="stylesheet" href="{% static 'client/public/register.css' %}">
+    <link rel="stylesheet" href="{% static 'client/public/forms.css' %}">
 {% endblock extra-head %}
 
 {% block header%}
