--- a/app/main/templates/public/includes/footer.html
+++ b/app/main/templates/public/includes/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="footer-section">
     <div class="title">
-        <h3>> Navigation</h3>
+        <h3> Navigation</h3>
     </div>
     <ul>
         <li><a href="#" class="tabs">Accueil</a></li>
@@ -11,15 +11,15 @@
 </div>
 <div class="footer-section">
     <div class="title">
-        <h3>> Contactez-nous</h3>
+        <h3> Contactez-nous</h3>
     </div>
     <p>Email: info@example.com</p>
     <p>Tél: 123-456-7890</p>
-    <p><a href="#">>Formulaire de contact</a></p>
+    <p><a href="#">Formulaire de contact</a></p>
 </div>
 <div class="footer-section">
     <div class="title">
-        <h3>> À propos de nous</h3>
+        <h3> À propos de nous</h3>
     </div>
     <p>Nous prédisons les entrées des films en utilisant la puissance de l'Intelligence Artificielle.</p>
     <p>© 2023 Popularity Corner, Tous droits réservés</p>
