--- a/app/main/templates/public/includes/navbar.html
+++ b/app/main/templates/public/includes/navbar.html
@@ -4,12 +4,23 @@
         <img src="{% static 'media/popularity_corner.png' %}" alt="Popularity Corner Logo" height="100" width="200">
     </a>
     <ul>
-        <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
-        <li><a href="#" class="tabs">À propos</a></li>
-        <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
+            <li><a href="#" class="tabs">À propos</a></li>
+            <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
+            <li><a href="{% url 'dashboard' %}" class="button">Dashboard des prédictions</a></li>
+        {% else %}
+            <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
+            <li><a href="#" class="tabs">À propos</a></li>
+            <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
+        {% endif %}
     </ul>
     <ul>
-        <li><a href="{% url 'register' %}" class="button">Inscription</a></li>
-        <li><a href="{% url 'login' %}" class="button">Connexion</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'logout' %}" class="button">Se déconnecter</a></li> 
+        {% else %}
+            <li><a href="{% url 'register' %}" class="button">Inscription</a></li>
+            <li><a href="{% url 'login' %}" class="button">Connexion</a></li>
+        {% endif %}
     </ul>
 </nav>
