--- a/app/main/templates/public/includes/navbar.html
+++ b/app/main/templates/public/includes/navbar.html
@@ -8,7 +8,7 @@
             <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
             <li><a href="#" class="tabs">À propos</a></li>
             <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
-            <li><a href="{% url 'dashboard' %}" class="button">Dashboard des prédictions</a></li>
+            <li><a href="{% url 'predictions' %}" class="button">Dashboard des prédictions</a></li>
         {% else %}
             <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
             <li><a href="#" class="tabs">À propos</a></li>
