--- a/app/main/templates/public/login.html
+++ b/app/main/templates/public/login.html
@@ -1,15 +1,40 @@
 
+{% extends '../base.html' %}
+{% load static %}
+
+{% block title %}Connexion - Popularity Corner{% endblock title %}
+
+{% block extra-head %}
+    <link rel="stylesheet" href="{% static 'client/public/forms.css' %}">
+{% endblock extra-head %}
+
+{% block header%}
+    {% include './includes/navbar.html' %}
+{% endblock header%}
+
+
 {% block body %}
-        <form method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                        <label for="username">Nom d'utilisateur</label>
-                        <input type="text" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Nom d'utilisateur">
-                </div>
-                <div class="form-group">
-                        <label for="exampleInputPassword1">Mot de passe</label>
-                        <input type="password" class="form-control" name="password" placeholder="Mot de passe">
-                </div>
-                      <button type="submit" class="btn ">Connexion</button>
+<div class="register-container">
+    <div class="form-box">
+        <h2 class="form-title"> Register </h2>
+        <form method="POST" class="form">
+            {% csrf_token %}
+            <div class="input-container">
+                <input type="text" class="input-field" name="username" aria-describedby="emailHelp" placeholder="Nom d'utilisateur">
+                <label class="field-label" for="username">Nom d'utilisateur</label>
+            </div>
+            <div class="input-container">
+                <input type="password" class="input-field" name="password" placeholder="Mot de passe">
+                <label class="field-label" for="password">Mot de passe</label>
+            </div>
+            <button type="submit" class="form-btn form-btn-secondary">Connexion</button>
         </form>
-{% endblock %}
+    </div>
+</div>
+{% endblock body %}
+
+
+{% comment %} ! Le Footer  {% endcomment %}
+{% block footer %}
+    {% include './includes/footer.html' %}
+{% endblock footer%}
