--- a/app/main/templates/private/resultats.html
+++ b/app/main/templates/private/resultats.html
@@ -15,7 +15,7 @@
 <div class="header-section">
     <h1>Résultat</h1>
     <h2>Performance des prédictions</h2>
-    <p>Erreur moyenne : {{rmse|floatformat:0}}</p>
+    <h4>Erreur moyenne : {{rmse|floatformat:0}}</h4>
     <div class="divider"></div>
 </div>
 
@@ -24,9 +24,10 @@
     {% if resultat.prediction is not None %}
     <li class="movie-item">
         <div class="text-resultats">
-        <p>{{resultat.title}}, Date : {{resultat.week}}</p>
+        <p><strong>{{resultat.title}}</strong></p>
+        <p>Date : {{resultat.week}}</p>
         <p>Résultats réels : {{resultat.entrance}}</p>
-        <p>Prédiction : {{resultat.prediction}}</p>
+        <p>Prédiction : {{resultat.prediction|floatformat:0}}</p>
         <p> Pourcentage d'erreur : {{ resultat.prediction|sub:resultat.entrance|div:resultat.entrance|mul:100|floatformat:2 }}%</p>
         </div>
         <img src={{resultat.image}} alt={{resultat.title}}>
