--- a/app/main/templates/public/home.html
+++ b/app/main/templates/public/home.html
@@ -51,7 +51,7 @@
               </div>
               <div class="post-boxed__aside">
                 <div class="unit unit-horizontal unit-middle unit-spacing-xs">
-                  <div class="unit__left"><img class="post-boxed__avatar" src="chemin/vers/votre/image.jpg" alt="Auteur" width="46" height="46" /></div>
+                  <div class="unit__left"><img class="post-boxed__avatar" alt="Auteur" width="46" height="46" /></div>
                   <div class="unit__body">
                     <h6 class="text-uppercase">par Etc ...</h6>
                   </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="post-boxed__aside">
                   <div class="unit unit-horizontal unit-middle unit-spacing-xs">
-                    <div class="unit__left"><img class="post-boxed__avatar" src="chemin/vers/votre/image.jpg" alt="Auteur" width="46" height="46" /></div>
+                    <div class="unit__left"><img class="post-boxed__avatar" alt="Auteur" width="46" height="46" /></div>
                     <div class="unit__body">
                       <h6 class="text-uppercase">par Maxime</h6>
                     </div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="post-boxed__aside">
                   <div class="unit unit-horizontal unit-middle unit-spacing-xs">
-                    <div class="unit__left"><img class="post-boxed__avatar" src="chemin/vers/votre/image.jpg" alt="Auteur" width="46" height="46" /></div>
+                    <div class="unit__left"><img class="post-boxed__avatar" alt="Auteur" width="46" height="46" /></div>
                     <div class="unit__body">
                       <h6 class="text-uppercase">par Manon</h6>
                     </div>
