feat: modify some templates

--- a/app/main/templates/public/contact.html
+++ b/app/main/templates/public/contact.html
@@ -5,12 +5,15 @@
     Contact - Popularity Corner
 {% endblock title %}
 
+{% block extra-head %}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+{% endblock extra-head %}
+
 {% block header %}
     {% include './includes/navbar.html' %}
 {% endblock header %}
 
 {% block body %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 <div class="container">
    <div class="content">
      <div class="left-side">
