--- a/app/main/templates/public/includes/footer.html
+++ b/app/main/templates/public/includes/footer.html
@@ -4,9 +4,9 @@
         <h3> Navigation</h3>
     </div>
     <ul>
-        <li><a href="#" class="tabs">Accueil</a></li>
-        <li><a href="#" class="tabs">À propos</a></li>
-        <li><a href="#" class="tabs">Contact</a></li>
+        <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
+        <li><a href="{% url 'about' %}" class="tabs">À propos</a></li>
+        <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
     </ul>
 </div>
 <div class="footer-section">
