--- a/app/main/templates/public/includes/navbar.html
+++ b/app/main/templates/public/includes/navbar.html
@@ -6,13 +6,13 @@
     <ul>
         {% if user.is_authenticated %}
             <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
-            <li><a href="#" class="tabs">À propos</a></li>
+            <li><a href="{% url 'about' %}" class="tabs">À propos</a></li>
             <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
             <li><a href="{% url 'predictions' %}" class="button">Dashboard des prédictions</a></li>
             <li><a href="{% url 'resultats' %}" class="button">Résultats</a></li>
         {% else %}
             <li><a href="{% url 'home' %}" class="tabs">Accueil</a></li>
-            <li><a href="#" class="tabs">À propos</a></li>
+            <li><a href="{% url 'about' %}" class="tabs">À propos</a></li>
             <li><a href="{% url 'contact' %}" class="tabs">Contact</a></li>
         {% endif %}
     </ul>
