--- a/app/main/templates/public/about.html
+++ b/app/main/templates/public/about.html
@@ -15,7 +15,7 @@
       <img class="card-img-top" src="{% static 'media/antonin.jpg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
         <h5 class="card-title">Antonin</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        {% comment %} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> {% endcomment %}
       </div>
       <div class="card-footer">
         <small class="text-muted">Docker master</small>
@@ -25,7 +25,7 @@
       <img class="card-img-top" src="{% static 'media/manon.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
         <h5 class="card-title">Manon</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        {% comment %} <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> {% endcomment %}
       </div>
       <div class="card-footer">
         <small class="text-muted">Data Scientist master</small>
@@ -35,7 +35,7 @@
       <img class="card-img-top" src="{% static 'media/maxime.jpg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
         <h5 class="card-title">Maxime</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        {% comment %} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> {% endcomment %}
       </div>
       <div class="card-footer">
         <small class="text-muted">Airflow master</small>
@@ -45,7 +45,7 @@
         <img class="card-img-top" src="{% static 'media/agathe.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
         <div class="card-body">
             <h5 class="card-title">Agathe</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            {% comment %} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> {% endcomment %}
         </div>
         <div class="card-footer">
             <small class="text-muted">Azure master</small>
