--- a/app/main/templates/public/login.html
+++ b/app/main/templates/public/login.html
@@ -16,7 +16,7 @@
 {% block body %}
 <div class="register-container">
     <div class="form-box">
-        <h2 class="form-title"> Register </h2>
+        <h2 class="form-title"> Connexion </h2>
         <form method="POST" class="form">
             {% csrf_token %}
             <div class="input-container">
