--- a/app/main/templates/private/estimations.html
+++ b/app/main/templates/private/estimations.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Accueil - Popularity Corner
+    Prédictions - Popularity Corner
 {% endblock title %}
 
 {% block header %}
