--- a/app/main/templates/public/includes/footer.html
+++ b/app/main/templates/public/includes/footer.html
@@ -15,7 +15,7 @@
     </div>
     <p>Email: info@example.com</p>
     <p>Tél: 123-456-7890</p>
-    <p><a href="#">Formulaire de contact</a></p>
+    <p><a href="{% url 'contact' %}">Formulaire de contact</a></p>
 </div>
 <div class="footer-section">
     <div class="title">
