--- a/app/main/templates/public/register.html
+++ b/app/main/templates/public/register.html
@@ -15,7 +15,7 @@
 {% block body %}
 <div class="register-container">
     <div class="form-box">
-        <h2 class="form-title"> Register </h2>
+        <h2 class="form-title"> Inscription </h2>
         <form action="{% url 'register' %}" method="POST" class="form">
             {% csrf_token %}
             {% for field in form %}
@@ -24,7 +24,7 @@
                     <label for="{{ field.auto_id }}" class="field-label">{{ field.label }}</label>
                 </div>
             {% endfor %}
-            <input type="submit" value ='submit' class="form-btn form-btn-secondary">
+            <input type="submit" value ="S'inscrire" class="form-btn form-btn-secondary">
         </form>
     </div>
 </div>
