build: django app version 1.0.1

--- a/app/main/templates/public/about.html
+++ b/app/main/templates/public/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Contact - Popularity Corner
+    À propos - Popularity Corner
 {% endblock title %}
 
 {% block header %}
